--- a/blocks/hoiandor/foot.pug
+++ b/blocks/hoiandor/foot.pug
@@ -68,12 +68,12 @@ footer.main-footer.bg-color-2
             a(href="/") Hoian d'Or © 2021 All Right Reserved
         ul.footer-nav.pull-right
           li
-            a(href="https://opensource.org/ToS", target="_blank") Terms of Service
+            a(href="https://opensource.org/ToS", target="_blank", rel="noreferrer") Terms of Service
           li
-            a(href="https://opensource.org/licenses/MIT", target="_blank") Privacy Policy
+            a(href="https://opensource.org/licenses/MIT", target="_blank", rel="noreferrer") Privacy Policy
           li
-            a(href="https://github.com/bluevariant", target="_blank") Website Design Services
+            a(href="https://github.com/bluevariant", target="_blank", rel="noreferrer") Website Design Services
 //  main-footer end 
 // Scroll to top
-button.scroll-top.scroll-to-target(data-target="html")
+button.scroll-top.scroll-to-target(data-target="html", aria-label="Lên đầu trang")
   span.fal.fa-angle-up
