--- a/layouts/hoiandor/home.pug
+++ b/layouts/hoiandor/home.pug
@@ -4,7 +4,7 @@ html(lang="vi")
     block meta
       meta(charset="utf-8")
       meta(http-equiv="X-UA-Compatible", content="IE=edge")
-      meta(name="viewport", content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0")
+      meta(name="viewport", content="width=device-width,initial-scale=1,maximum-scale=5")
     block head
       title= title
     block link
