chore: happy work

--- a/layouts/hoiandor/home.pug
+++ b/layouts/hoiandor/home.pug
@@ -10,27 +10,28 @@ html(lang="vi")
     block link
       link(rel="icon", href="assets/themes/assets/images/favicon.ico", type="image/x-icon")
       // Google Fonts
-      link(
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
-        rel="stylesheet"
-      )
-      link(
-        href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
-        rel="stylesheet"
-      )
+      //link(
+      //  href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
+      //  rel="stylesheet"
+      //)
+      //link(
+      //  href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
+      //  rel="stylesheet"
+      //)
       // Stylesheets
-      link(href="assets/themes/assets/css/font-awesome-all.css", rel="stylesheet")
-      link(href="assets/themes/assets/css/flaticon.css", rel="stylesheet")
-      link(href="assets/themes/assets/css/owl.css", rel="stylesheet")
+      //link(rel="preload", as="style", onload="this.onload=null;this.rel='stylesheet'", href="")
+      //link(href="assets/themes/assets/css/font-awesome-all.css", rel="stylesheet")
+      //link(href="assets/themes/assets/css/flaticon.css", rel="stylesheet")
+      //link(href="assets/themes/assets/css/owl.css", rel="stylesheet")
       link(href="assets/themes/assets/css/bootstrap.css", rel="stylesheet")
-      link(href="assets/themes/assets/css/jquery.fancybox.min.css", rel="stylesheet")
-      link(href="assets/themes/assets/css/animate.css", rel="stylesheet")
-      link(href="assets/themes/assets/css/nice-select.css", rel="stylesheet")
-      link(href="assets/themes/assets/css/jquery-ui.css", rel="stylesheet")
+      //link(href="assets/themes/assets/css/jquery.fancybox.min.css", rel="stylesheet")
+      //link(href="assets/themes/assets/css/animate.css", rel="stylesheet")
+      //link(href="assets/themes/assets/css/nice-select.css", rel="stylesheet")
+      //link(href="assets/themes/assets/css/jquery-ui.css", rel="stylesheet")
       link(href="assets/themes/assets/css/color.css", rel="stylesheet")
       link(href="assets/themes/assets/css/style.css", rel="stylesheet")
       link(href="assets/themes/assets/css/responsive.css", rel="stylesheet")
-      link(href="assets/css/viewer.min.css", rel="stylesheet")
+      //link(href="assets/css/viewer.min.css", rel="stylesheet")
       link(href="assets/css/style.css", rel="stylesheet")
       link(href="assets/css/sm.css", rel="stylesheet")
       link(href="assets/css/md.css", rel="stylesheet")
@@ -40,6 +41,31 @@ html(lang="vi")
     .boxed_wrapper
       block body
     block script
+      link(
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
+        rel="stylesheet"
+      )
+      link(
+        href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
+        rel="stylesheet"
+      )
+      link(href="assets/themes/assets/css/font-awesome-all.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/flaticon.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/owl.css", rel="stylesheet")
+      //link(href="assets/themes/assets/css/bootstrap.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/jquery.fancybox.min.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/animate.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/nice-select.css", rel="stylesheet")
+      link(href="assets/themes/assets/css/jquery-ui.css", rel="stylesheet")
+      //link(href="assets/themes/assets/css/color.css", rel="stylesheet")
+      //link(href="assets/themes/assets/css/style.css", rel="stylesheet")
+      //link(href="assets/themes/assets/css/responsive.css", rel="stylesheet")
+      link(href="assets/css/viewer.min.css", rel="stylesheet")
+      //link(href="assets/css/style.css", rel="stylesheet")
+      //link(href="assets/css/sm.css", rel="stylesheet")
+      //link(href="assets/css/md.css", rel="stylesheet")
+      //link(href="assets/css/lg.css", rel="stylesheet")
+      //link(href="assets/css/xl.css", rel="stylesheet")
       script(src="assets/js/viewer.min.js")
       // jquery plugins
       script(src="assets/themes/assets/js/jquery.js")
