--- a/pages/hoiandor/index.pug
+++ b/pages/hoiandor/index.pug
@@ -1,7 +1,7 @@
 extends ../../layouts/hoiandor/home
 
 block body
-  include ../../blocks/hoiandor/preloader
+  //include ../../blocks/hoiandor/preloader
   include ../../blocks/hoiandor/header
   include ../../blocks/hoiandor/banner
   include ../../blocks/hoiandor/about01
