--- a/layouts/hoiandor/home.pug
+++ b/layouts/hoiandor/home.pug
@@ -56,7 +56,8 @@ html(lang="vi")
       link(href="assets/themes/assets/css/jquery.fancybox.min.css", rel="stylesheet")
       link(href="assets/themes/assets/css/animate.css", rel="stylesheet")
       link(href="assets/themes/assets/css/nice-select.css", rel="stylesheet")
-      link(href="assets/themes/assets/css/jquery-ui.css", rel="stylesheet")
+      //link(href="assets/themes/assets/css/jquery-ui.css", rel="stylesheet")
+      link(href="assets/css/jquery-ui.min.css", rel="stylesheet")
       //link(href="assets/themes/assets/css/color.css", rel="stylesheet")
       //link(href="assets/themes/assets/css/style.css", rel="stylesheet")
       //link(href="assets/themes/assets/css/responsive.css", rel="stylesheet")
@@ -68,7 +69,8 @@ html(lang="vi")
       //link(href="assets/css/xl.css", rel="stylesheet")
       script(src="assets/js/viewer.min.js")
       // jquery plugins
-      script(src="assets/themes/assets/js/jquery.js")
+      //script(src="assets/themes/assets/js/jquery.js")
+      script(src="assets/js/jquery-3.6.0.min.js")
       script(src="assets/themes/assets/js/popper.min.js")
       script(src="assets/themes/assets/js/bootstrap.min.js")
       script(src="assets/themes/assets/js/owl.js")
@@ -78,7 +80,7 @@ html(lang="vi")
       script(src="assets/themes/assets/js/appear.js")
       script(src="assets/themes/assets/js/scrollbar.js")
       script(src="assets/themes/assets/js/jquery.nice-select.min.js")
-      script(src="assets/themes/assets/js/jquery-ui.js")
+      script(src="assets/js/jquery-ui.min.js")
       // main-js
       script(src="assets/themes/assets/js/script.js")
       script(src="assets/js/main.js")
