--- a/layouts/hoiandor/home.pug
+++ b/layouts/hoiandor/home.pug
@@ -48,14 +48,15 @@ html(lang="vi")
       link(href="assets/themes/assets/css/color.css", rel="stylesheet")
       //link(href="assets/themes/assets/css/style.css", rel="stylesheet")
       //link(href="assets/themes/assets/css/responsive.css", rel="stylesheet")
-      link(
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
-        rel="stylesheet"
-      )
-      link(
-        href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
-        rel="stylesheet"
-      )
+      //link(
+      //  href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
+      //  rel="stylesheet"
+      //)
+      //link(
+      //  href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap",
+      //  rel="stylesheet"
+      //)
+      link(href="assets/css/fonts.css", rel="stylesheet")
       link(href="assets/themes/assets/css/font-awesome-all.css", rel="stylesheet")
       link(href="assets/themes/assets/css/flaticon.css", rel="stylesheet")
       link(href="assets/themes/assets/css/owl.css", rel="stylesheet")
