--- a/assets/hoiandor/css/fonts.css
+++ b/assets/hoiandor/css/fonts.css
@@ -1,5 +1,6 @@
 /* playfair-display-regular - vietnamese */
 @font-face {
+  font-display: swap;
   font-family: "Playfair Display";
   font-style: normal;
   font-weight: 400;
@@ -14,6 +15,7 @@
 }
 /* playfair-display-600 - vietnamese */
 @font-face {
+  font-display: swap;
   font-family: "Playfair Display";
   font-style: normal;
   font-weight: 600;
@@ -27,6 +29,7 @@
 }
 /* playfair-display-700 - vietnamese */
 @font-face {
+  font-display: swap;
   font-family: "Playfair Display";
   font-style: normal;
   font-weight: 700;
@@ -40,6 +43,7 @@
 }
 /* playfair-display-900 - vietnamese */
 @font-face {
+  font-display: swap;
   font-family: "Playfair Display";
   font-style: normal;
   font-weight: 900;
@@ -53,6 +57,7 @@
 }
 /* playfair-display-600italic - vietnamese */
 @font-face {
+  font-display: swap;
   font-family: "Playfair Display";
   font-style: italic;
   font-weight: 600;
@@ -69,79 +74,79 @@
 
 /* work-sans-regular - vietnamese */
 @font-face {
-  font-family: 'Work Sans';
+  font-display: swap;
+  font-family: "Work Sans";
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-regular.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-regular.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-regular.woff') format('woff'), /* Modern Browsers */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-regular.svg#WorkSans') format('svg'); /* Legacy iOS */
+  src: url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-regular.eot"); /* IE9 Compat Modes */
+  src: local(""), url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-regular.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-regular.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-regular.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-regular.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-regular.svg#WorkSans") format("svg"); /* Legacy iOS */
 }
 /* work-sans-500 - vietnamese */
 @font-face {
-  font-family: 'Work Sans';
+  font-display: swap;
+  font-family: "Work Sans";
   font-style: normal;
   font-weight: 500;
-  src: url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-500.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-500.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-500.woff') format('woff'), /* Modern Browsers */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-500.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-500.svg#WorkSans') format('svg'); /* Legacy iOS */
+  src: url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-500.eot"); /* IE9 Compat Modes */
+  src: local(""), url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-500.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-500.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-500.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-500.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-500.svg#WorkSans") format("svg"); /* Legacy iOS */
 }
 /* work-sans-700 - vietnamese */
 @font-face {
-  font-family: 'Work Sans';
+  font-display: swap;
+  font-family: "Work Sans";
   font-style: normal;
   font-weight: 700;
-  src: url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-700.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-700.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-700.woff') format('woff'), /* Modern Browsers */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-700.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-700.svg#WorkSans') format('svg'); /* Legacy iOS */
+  src: url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-700.eot"); /* IE9 Compat Modes */
+  src: local(""), url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-700.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-700.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-700.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-700.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-700.svg#WorkSans") format("svg"); /* Legacy iOS */
 }
 /* work-sans-600 - vietnamese */
 @font-face {
-  font-family: 'Work Sans';
+  font-display: swap;
+  font-family: "Work Sans";
   font-style: normal;
   font-weight: 600;
-  src: url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600.woff') format('woff'), /* Modern Browsers */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600.svg#WorkSans') format('svg'); /* Legacy iOS */
+  src: url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600.eot"); /* IE9 Compat Modes */
+  src: local(""), url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600.svg#WorkSans") format("svg"); /* Legacy iOS */
 }
 /* work-sans-italic - vietnamese */
 @font-face {
-  font-family: 'Work Sans';
+  font-display: swap;
+  font-family: "Work Sans";
   font-style: italic;
   font-weight: 400;
-  src: url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-italic.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-italic.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-italic.woff') format('woff'), /* Modern Browsers */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-italic.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-italic.svg#WorkSans') format('svg'); /* Legacy iOS */
+  src: url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-italic.eot"); /* IE9 Compat Modes */
+  src: local(""), url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-italic.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-italic.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-italic.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-italic.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-italic.svg#WorkSans") format("svg"); /* Legacy iOS */
 }
 /* work-sans-600italic - vietnamese */
 @font-face {
-  font-family: 'Work Sans';
+  font-display: swap;
+  font-family: "Work Sans";
   font-style: italic;
   font-weight: 600;
-  src: url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600italic.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600italic.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600italic.woff') format('woff'), /* Modern Browsers */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600italic.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600italic.svg#WorkSans') format('svg'); /* Legacy iOS */
+  src: url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600italic.eot"); /* IE9 Compat Modes */
+  src: local(""), url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600italic.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600italic.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600italic.woff") format("woff"),
+    /* Modern Browsers */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600italic.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("../fonts/work-sans-v11-vietnamese/work-sans-v11-vietnamese-600italic.svg#WorkSans") format("svg"); /* Legacy iOS */
 }
