--- a/blocks/hoiandor/about01.pug
+++ b/blocks/hoiandor/about01.pug
@@ -1,5 +1,5 @@
 section#tong-quan.about-section.la-cloud(style="background: #f5f6f6")
-  .pattern-layer.la-no-animation(style="background-image: url(assets/themes/assets/images/shape/shape-9.png)")
+  .pattern-layer.la-no-animation(style="background-image: url(/assets/themes/assets/images/shape/shape-9.png)")
   .auto-container
     .row.clearfix
       .col-lg-6.col-md-12.col-sm-12.image-column
@@ -31,7 +31,7 @@ section#tong-quan.about-section.la-cloud(style="background: #f5f6f6")
                 p.color-text-primary
                   b!= detail.primary
                   span!= ' ' + detail.secondary
-            //img(src="assets/images/partners.png", alt="Đơn vị hoian d'or")
+            //img(src="/assets/images/partners.png", alt="Đơn vị hoian d'or")
             //                   <ul class="list clearfix">
             //                     <li>Ratione voluptatem.sequi nesciunt.</li>
             //                     <li>Ratione voluptatem.</li>
@@ -40,4 +40,4 @@ section#tong-quan.about-section.la-cloud(style="background: #f5f6f6")
             //.btn-box
             //  a.theme-btn(href="#contact") Liên Hệ
       //.col-lg-12.col-md-12.col-sm-12
-      //  img(src="assets/images/partners.png", style="width: 100%")
+      //  img(src="/assets/images/partners.png", style="width: 100%")
