chore: lorem ipsum

--- a/pages/hoiandor/posts.pug
+++ b/pages/hoiandor/posts.pug
@@ -2,13 +2,13 @@ extends ../../layouts/hoiandor/home
 
 block body
   include ../../blocks/hoiandor/header
-  article
+  article#content
     section.page-title(style=`background-image: url(${background})`)
       .auto-container
         .content-box(style="margin-top: 100px")
           .row
             header.col-lg-8.col-md-12.col-sm-12.content-side
-              h1!= title
+              h1#firstHeading!= title
               p.la-text-justify!= description
     section.sidebar-page-container(style="padding-top: 0")
       .auto-container
