--- a/pages/hoiandor/posts.pug
+++ b/pages/hoiandor/posts.pug
@@ -15,6 +15,24 @@ block body
         .row.clearfix
           .col-lg-8.col-md-12.col-sm-12.content-side
             .blog-details-content
+              #toc.toc
+                .toctitle(lang="vi", dir="ltr")
+                  h2#mw-toc-heading Nội dung
+                ul
+                  - for (let i=0;i<contents.length;i++)
+                    - var item = contents[i];
+                      li.toclevel-1.tocsection-1
+                        a(href=item.href)
+                          span.tocnumber!= i + 1
+                          span.toctext!= item.name
+                        - if (item.children && item.children.length>0)
+                          ul
+                            - for (let j=0;j<item.children.length;j++)
+                              - var item1 = item.children[j];
+                                li.toclevel-2.tocsection-2
+                                  a(href=item1.href)
+                                    span.tocnumber!= i + 1 + '.' + (j + 1)
+                                    span.toctext!= item1.name
               //.news-block-one
               //  .inner-box
               //    .lower-content
