--- a/layouts/hoiandor/home.pug
+++ b/layouts/hoiandor/home.pug
@@ -85,6 +85,7 @@ html(lang="vi")
       script(src="/assets/themes/assets/js/scrollbar.js")
       script(src="/assets/themes/assets/js/jquery.nice-select.min.js")
       script(src="/assets/js/jquery-ui.min.js")
+      script(src="/assets/js/sticky.min.js")
       // main-js
       script(src="/assets/themes/assets/js/script.js")
       script(src="/assets/js/main.js")
