--- a/assets/hoiandor/css/lg.css
+++ b/assets/hoiandor/css/lg.css
@@ -1,3 +1,9 @@
 @media only screen and (min-width: 992px) {
+  .la-see-also {
+    padding-top: 4em;
+  }
 
+  .la-sticky-love {
+    margin-top: 100px;
+  }
 }
