--- a/layouts/hoiandor/home.pug
+++ b/layouts/hoiandor/home.pug
@@ -40,6 +40,11 @@ html(lang="vi")
       //link(href="/assets/themes/assets/css/bootstrap.css", rel="stylesheet")
       link(href="/assets/themes/assets/css/style.css", rel="stylesheet")
       link(href="/assets/themes/assets/css/responsive.css", rel="stylesheet")
+      link(href="/assets/css/style.css", rel="stylesheet")
+      link(href="/assets/css/sm.css", rel="stylesheet")
+      link(href="/assets/css/md.css", rel="stylesheet")
+      link(href="/assets/css/lg.css", rel="stylesheet")
+      link(href="/assets/css/xl.css", rel="stylesheet")
   body#images-viewer
     .boxed_wrapper
       block body
@@ -63,11 +68,11 @@ html(lang="vi")
       link(href="/assets/themes/assets/css/jquery.fancybox.min.css", rel="stylesheet")
       link(href="/assets/themes/assets/css/animate.css", rel="stylesheet")
       link(href="/assets/themes/assets/css/nice-select.css", rel="stylesheet")
-      link(href="/assets/css/style.css", rel="stylesheet")
-      link(href="/assets/css/sm.css", rel="stylesheet")
-      link(href="/assets/css/md.css", rel="stylesheet")
-      link(href="/assets/css/lg.css", rel="stylesheet")
-      link(href="/assets/css/xl.css", rel="stylesheet")
+      //link(href="/assets/css/style.css", rel="stylesheet")
+      //link(href="/assets/css/sm.css", rel="stylesheet")
+      //link(href="/assets/css/md.css", rel="stylesheet")
+      //link(href="/assets/css/lg.css", rel="stylesheet")
+      //link(href="/assets/css/xl.css", rel="stylesheet")
       //link(href="/assets/themes/assets/css/jquery-ui.css", rel="stylesheet")
       link(href="/assets/css/jquery-ui.min.css", rel="stylesheet")
       link(href="/assets/css/viewer.min.css", rel="stylesheet")
