--- a/pages/hoiandor/posts.pug
+++ b/pages/hoiandor/posts.pug
@@ -61,27 +61,13 @@ block body
           .col-lg-4.col-md-12.col-sm-12.sidebar-side(data-sticky-container)
             .blog-sidebar.default-sidebar.la-see-also
               .sidebar-widget.post-widget.la-sticky(data-sticky-wrap="true", data-sticky-for="992", data-margin-top="120")
-                .widget-title(style="margin-bottom: 3em")
+                .widget-title(style="margin-bottom: 1em")
                   h2#see-also.text-pretty.color-primary.font-weight-bold Xem thêm
-                .post-inner
-                  .post
-                    figure.post-thumb
-                      a(href="blog-details.html")
-                        img(src="assets/images/news/post-1.png", alt)
-                    h4
-                      a(href="blog-details.html") Consequntur eos magni dolore.
-                    //p!= description
-                  .post
-                    figure.post-thumb
-                      a(href="blog-details.html")
-                        img(src="assets/images/news/post-2.png", alt)
-                    h4
-                      a(href="blog-details.html") Magni dolore qui ratione seque.
-                  .post
-                    figure.post-thumb
-                      a(href="blog-details.html")
-                        img(src="assets/images/news/post-3.png", alt)
-                    h4
-                      a(href="blog-details.html") Ratone magni sed dolore eos.
+                ul.post-inner
+                  - for (const post of posts)
+                    li.post
+                      a(href=post.url, title=post.description)
+                        span.postnumber &bull;
+                        span.posttext!= post.title
   include ../../blocks/hoiandor/contact01
   include ../../blocks/hoiandor/foot
