--- a/pages/hoiandor/posts.pug
+++ b/pages/hoiandor/posts.pug
@@ -46,6 +46,7 @@ block body
                 ul.social-links.pull-right.clearfix(style="margin-bottom: 0")
                   li
                     a.share-facebook(
+                      href="https://fb.com",
                       target="_blank",
                       onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;",
                       rel="noreferrer"
@@ -53,6 +54,7 @@ block body
                       i.fab.fa-facebook-f
                   li
                     a.share-twitter(
+                      href="https://twitter.com",
                       target="_blank",
                       onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;",
                       rel="noreferrer"
