--- a/layouts/hoiandor/home.pug
+++ b/layouts/hoiandor/home.pug
@@ -5,6 +5,8 @@ html(lang="vi")
       meta(charset="utf-8")
       meta(http-equiv="X-UA-Compatible", content="IE=edge")
       meta(name="viewport", content="width=device-width,initial-scale=1,maximum-scale=5")
+      meta(name="description", content=description)
+      meta(name="robots", content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1")
     block head
       title= title
     block link
