--- a/assets/hoiandor/css/style.css
+++ b/assets/hoiandor/css/style.css
@@ -486,3 +486,25 @@ a:active {
 ul.post-inner {
   list-style: decimal;
 }
+
+.la-contact-pin {
+  position: fixed;
+  bottom: 2em;
+  left: 2em;
+  padding: 0.5em 1em;
+  background: var(--primary-color);
+  border-radius: 2em;
+  z-index: 999;
+  box-shadow: 0px 15px 25px 0px rgb(255 124 91 / 30%);
+  font-weight: bold;
+  background-position: -50px -75px;
+}
+
+.la-contact-pin i,
+.la-contact-pin a {
+  color: #fff !important;
+}
+
+.la-contact-pin a span {
+  margin-left: 0.5em;
+}
