chore: lorem ipsum

--- a/blocks/hoiandor/contact01.pug
+++ b/blocks/hoiandor/contact01.pug
@@ -10,7 +10,7 @@ section#lien-he.contact-section.la-cloud
         .content_block_5
           .content-box
             .sec-title
-              p.color-primary Hội An D'Or
+              p.color-primary!= preloader.text
               h2.color-primary Liên hệ
               //h3.color-primary(style="margin-top: 1em") Nhận thông tin mới nhất về dự án chính thức từ chủ đầu tư
             //.text
