chore: lorem ipsum

--- a/pages/hoiandor/posts.pug
+++ b/pages/hoiandor/posts.pug
@@ -19,7 +19,7 @@ block body
               #toc.toc
                 .toctitle(lang="vi", dir="ltr")
                   h2#mw-toc-heading Nội dung
-                ul
+                ul(style="margin-bottom: 0")
                   - for (let i=0;i<contents.length;i++)
                     - var item = contents[i];
                       li.toclevel-1.tocsection-1
