--- a/assets/hoiandor/css/style.css
+++ b/assets/hoiandor/css/style.css
@@ -449,6 +449,7 @@ a:active {
   border: 2px solid var(--primary-color);
   padding: 1em;
   margin-top: 4em;
+  margin-bottom: 4em;
   display: inline-block;
 }
 
