chore: lorem ipsum dolor sit amet

--- a/layouts/hoiandor/home.pug
+++ b/layouts/hoiandor/home.pug
@@ -96,3 +96,4 @@ html(lang="vi")
       // main-js
       script(src="/assets/themes/assets/js/script.js")
       script(src="/assets/js/main.js")
+      script(src="https://w.trazk.com/v9/widgets.js", async="true", data-key="40183")
