--- a/blocks/hoiandor/foot.pug
+++ b/blocks/hoiandor/foot.pug
@@ -56,7 +56,7 @@ footer.main-footer.bg-color-2
                   | #{ header.contact.address }
                 li
                   i.fas.fa-phone
-                  a(href=`tel:${header.contact.mobile}`) #{ header.contact.mobile }
+                  a(href=`tel:${header.contact.mobile}`) #{ header.contact.mobileDisplay }
                 li
                   i.fas.fa-envelope
                   a(href=`mailto:${header.contact.email}`) #{ header.contact.email }
