--- a/layouts/hoiandor/home.pug
+++ b/layouts/hoiandor/home.pug
@@ -7,6 +7,30 @@ html(lang="vi")
       meta(name="viewport", content="width=device-width,initial-scale=1,maximum-scale=5")
       meta(name="description", content=description)
       meta(name="robots", content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1")
+      // Facebook Pixel Code
+      script.
+        !(function (f, b, e, v, n, t, s) {
+          if (f.fbq) return;
+          n = f.fbq = function () {
+            n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments);
+          };
+          if (!f._fbq) f._fbq = n;
+          n.push = n;
+          n.loaded = !0;
+          n.version = '2.0';
+          n.queue = [];
+          t = b.createElement(e);
+          t.async = !0;
+          t.src = v;
+          s = b.getElementsByTagName(e)[0];
+          s.parentNode.insertBefore(t, s);
+        })(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '611001639903714');
+        fbq('track', 'PageView');
+      noscript
+        img(height="1", width="1", src='https://www.facebook.com/tr?id=611001639903714&ev=PageView\
+                &noscript=1')
+      // End Facebook Pixel Code
     block head
       title= title
     block link
